--- a/frontend/src/chat/chat.html
+++ b/frontend/src/chat/chat.html
@@ -1,6 +1,16 @@
 <div class="chat-container">
     <div class="chat-header">
         <h1>Langchain Chatbot</h1>
+        <div class="user-info">
+            <span class="username">{{ currentUser || 'User' }}</span>
+            <button ng-click="logout()" class="logout-button" title="Logout">
+                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
+                    <polyline points="16 17 21 12 16 7"></polyline>
+                    <line x1="21" y1="12" x2="9" y2="12"></line>
+                </svg>
+            </button>
+        </div>
     </div>
     
     <div class="chat-messages" id="chatMessages">
